[package]
name = "Fanouni-security-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }

axum =  "0.8.8"
axum-extra ="0.12.5"

tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }

ring = "0.17.14"
rustls = "0.23.36"
